# ai-tools

./: .gitignore  AiToolsDev.lnk  GEMINI.md  README.md  aitools.sh  build.js  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json  tsconfig.vite.json  tsconfig.web.json
.github/workflows/: release.yaml
sendkey/: Cargo.toml  dist.js  index.d.ts  index.js  package.json  sendkey.linux-x64-gnu.node  sendkey.win32-x64-msvc.node
sendkey/__test__/: index.spec.mjs
sendkey/dist.win32_x64/: index.js  package.json  sendkey.win32-x64-msvc.node
sendkey/src/: lib.rs  sendkey_linux.rs  sendkey_win.rs
src/main/: index.ts
src/main/manager/: windowManager.ts
src/preload/: index.d.ts  index.ts
src/renderer/: components.d.ts  index.html
src/renderer/src/: App.vue  main.ts  mytheme.ts
src/renderer/src/assets/: base.css  main.css
src/renderer/src/components/: LLMResult.vue  Tools.vue  Versions.vue
src/renderer/src/composables/: settings.ts  tools.ts
src/renderer/src/pages/: EditLlm.vue  EditTools.vue  Main.vue  routers.ts
src/renderer/src/services/: db.ts  mcp.ts  models.ts
src/renderer/src/utils/: array.ts  llmResult.ts
