[package]
edition = "2021"
name = "sendkey"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
  ]